# friendly-octo-eureka

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
api/v1/: api.py
app/: settings.py  urls.py
orders/: admin.py  models.py
orders/api/v1/: api.py  schema.py
orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_options_alter_orderitem_options.py  0004_alter_orderitem_options.py  0005_order_paypal_id.py  0006_remove_order_paypal_id.py  0007_remove_order_status_order_payment_status_and_more.py
products/: admin.py  models.py
products/api/v1/: api.py  schema.py
products/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_options_alter_favorite_options_and_more.py  0004_alter_product_image.py  0005_product_stripe_price_id_product_stripe_product_id.py  0006_alter_product_stripe_price_id_and_more.py
static/: staticfiles.json
templates/: base.html  notifications.html
templates/auth/: password_update.html
users/: admin.py  models.py  urls.py  views.py
users/api/v1/: api.py  schema.py
users/migrations/: 0001_initial.py  0002_alter_artistprofile_options.py  0003_artistprofile_stripe_secret_key.py
utils/: base.py  stripe.py  tasks.py
