[tool.poetry]
package-mode = false

[project]
name = "backend"
version = "0.1.0"
description = "E-Commerce store backend"
authors = [
    {name = "Loisa Kitakaya",email = "kitakayaloisa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
