[tool.poetry]
package-mode = false

[project]
name = "backend"
version = "0.1.0"
description = "E-Commerce store backend"
authors = [
    {name = "Loisa Kitakaya",email = "kitakayaloisa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-countries (>=7.6.1,<8.0.0)",
    "pyuca (>=1.2,<2.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "django-storages (>=1.14.5,<2.0.0)",
    "boto3 (>=1.37.4,<2.0.0)",
    "django-ninja (>=1.3.0,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
